homework/hw06/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\anis\Documents\cs46a\homework\hw06
-d
C:\Users\anis\Documents\cs46a\homework\hw06\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\anis\Documents\cs46a\homework\hw06\Insurance.java
<---- end of javadoc command ---->
Loading source file C:\Users\anis\Documents\cs46a\homework\hw06\Insurance.java...
Constructing Javadoc information...
C:\Users\anis\Documents\cs46a\homework\hw06\Insurance.java:6: error: cannot find symbol
    private Person client;
            ^
  symbol:   class Person
  location: class Insurance
C:\Users\anis\Documents\cs46a\homework\hw06\Insurance.java:12: error: cannot find symbol
    public Insurance(Person p)
                     ^
  symbol:   class Person
  location: class Insurance
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\Insurance.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\package-frame.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\package-summary.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\allclasses-frame.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\allclasses-noframe.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\index.html...
Generating C:\Users\anis\Documents\cs46a\homework\hw06\doc\stylesheet.css...
2 warnings
